Uploading the dataset

--- a/Merging the datasets.ipynb
+++ b/Merging the datasets.ipynb
@@ -2,19 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"testing\")"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_data = pd.read_csv(\"DATA/CPU index.csv\")\n",
+    "vix_data = pd.read_csv(\"DATA/_VIX (1).csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning the Data"
    ]
   },
   {
