--- a/Merging the datasets.ipynb
+++ b/Merging the datasets.ipynb
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "cpu_data = pd.read_csv(\"DATA/CPU index.csv\")\n",
-    "vix_data = pd.read_csv(\"DATA/_VIX (1).csv\")"
+    "vix_data = pd.read_csv(\"DATA/_VIX (1).csv\")\n",
+    "BTC_data = pd.read_csv(\"DATA/BTC-USD.csv\")"
    ]
   },
   {
@@ -31,6 +32,253 @@
    "metadata": {},
    "source": [
     "# Cleaning the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>cpu_index</th>\n",
+       "      <th>old_cpu_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apr-87</td>\n",
+       "      <td>43.589069</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>May-87</td>\n",
+       "      <td>41.862022</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jun-87</td>\n",
+       "      <td>71.135203</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jul-87</td>\n",
+       "      <td>53.756704</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aug-87</td>\n",
+       "      <td>60.615545</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     date  cpu_index  old_cpu_index\n",
+       "0  Apr-87  43.589069            NaN\n",
+       "1  May-87  41.862022            NaN\n",
+       "2  Jun-87  71.135203            NaN\n",
+       "3  Jul-87  53.756704            NaN\n",
+       "4  Aug-87  60.615545            NaN"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpu_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2/1/2014</td>\n",
+       "      <td>18.570000</td>\n",
+       "      <td>21.480000</td>\n",
+       "      <td>13.44</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3/1/2014</td>\n",
+       "      <td>16.469999</td>\n",
+       "      <td>18.219999</td>\n",
+       "      <td>13.46</td>\n",
+       "      <td>13.88</td>\n",
+       "      <td>13.88</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4/1/2014</td>\n",
+       "      <td>13.430000</td>\n",
+       "      <td>17.850000</td>\n",
+       "      <td>12.60</td>\n",
+       "      <td>13.41</td>\n",
+       "      <td>13.41</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5/1/2014</td>\n",
+       "      <td>13.640000</td>\n",
+       "      <td>14.490000</td>\n",
+       "      <td>11.32</td>\n",
+       "      <td>11.40</td>\n",
+       "      <td>11.40</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6/1/2014</td>\n",
+       "      <td>11.690000</td>\n",
+       "      <td>12.890000</td>\n",
+       "      <td>10.34</td>\n",
+       "      <td>11.57</td>\n",
+       "      <td>11.57</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date       Open       High    Low  Close  Adj Close  Volume\n",
+       "0  2/1/2014  18.570000  21.480000  13.44  14.00      14.00     0.0\n",
+       "1  3/1/2014  16.469999  18.219999  13.46  13.88      13.88     0.0\n",
+       "2  4/1/2014  13.430000  17.850000  12.60  13.41      13.41     0.0\n",
+       "3  5/1/2014  13.640000  14.490000  11.32  11.40      11.40     0.0\n",
+       "4  6/1/2014  11.690000  12.890000  10.34  11.57      11.57     0.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "vix_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Droping unwanted columns from datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date               0\n",
+      "cpu_index          0\n",
+      "old_cpu_index    173\n",
+      "dtype: int64\n",
+      "Date         0\n",
+      "Open         6\n",
+      "High         6\n",
+      "Low          6\n",
+      "Close        6\n",
+      "Adj Close    6\n",
+      "Volume       6\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data cleaning and formatting (if needed)\n",
+    "print(cpu_data.isnull().sum())\n",
+    "print(vix_data.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert date columns to datetime format\n",
+    "vix_data['Date'] = pd.to_datetime(vix_data['Date'])"
    ]
   },
   {
