Data Merged and created merged file

--- a/Merging the datasets.ipynb
+++ b/Merging the datasets.ipynb
@@ -389,7 +389,6 @@
     }
    ],
    "source": [
-    "# Data cleaning and formatting (if needed)\n",
     "print(cpu_data.isnull().sum())\n",
     "print(vix_data.isnull().sum())\n",
     "print(BTC_data.isnull().sum())\n"
@@ -466,9 +465,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert date columns to datetime format\n",
     "vix_data['Date'] = pd.to_datetime(vix_data['Date'])\n",
-    "BTC_data['Date'] = pd.to_datetime(BTC_data['Date'])\n"
+    "BTC_data['Date'] = pd.to_datetime(BTC_data['Date'])"
    ]
   },
   {
@@ -505,9 +503,7 @@
     }
    ],
    "source": [
-    "\n",
-    "cpu_data.iloc[330]  # Indexing starts from 0, so 321st row has index 320\n",
-    "\n"
+    "cpu_data.iloc[330]  # Indexing starts from 0, so 321st row has index 320"
    ]
   },
   {
@@ -650,12 +646,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 117,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#cpu_selected_data['date'] = pd.to_datetime(cpu_selected_data['date'], format='%y-%b')"
+    "Renaming the 'date' column to 'Date'"
    ]
   },
   {
@@ -677,6 +671,13 @@
    ],
    "source": [
     "cpu_selected_data.rename(columns={'date': 'Date'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting date from 'cpu_selected_data' to datetime."
    ]
   },
   {
@@ -1016,6 +1017,75 @@
     "\n",
     "# Merge the resulting dataframe with Bitcoin data\n",
     "merged_data = pd.merge(merged_data, BTC_data_selected, on='Date', how='inner')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(104, 3)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cpu_index', 'Close_x', 'Close_y'], dtype='object')"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_data.rename(columns={'Close_x': 'VIX_Close', 'Close_y': 'BTC_Close'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cpu_index', 'VIX_Close', 'BTC_Close'], dtype='object')"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_data.columns"
    ]
   },
   {
