--- a/Merging the datasets.ipynb
+++ b/Merging the datasets.ipynb
@@ -923,83 +923,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cpu_index</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2014-10-01</th>\n",
-       "      <td>54.672738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-11-01</th>\n",
-       "      <td>131.020044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-12-01</th>\n",
-       "      <td>78.028200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01</th>\n",
-       "      <td>103.857210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-02-01</th>\n",
-       "      <td>89.559591</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             cpu_index\n",
-       "Date                  \n",
-       "2014-10-01   54.672738\n",
-       "2014-11-01  131.020044\n",
-       "2014-12-01   78.028200\n",
-       "2015-01-01  103.857210\n",
-       "2015-02-01   89.559591"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cpu_selected_data.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1086,6 +1009,103 @@
    ],
    "source": [
     "merged_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_data.to_csv('DATA/CPU+VIX+BTC.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cpu_index</th>\n",
+       "      <th>VIX_Close</th>\n",
+       "      <th>BTC_Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>cpu_index</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.337834</td>\n",
+       "      <td>0.477942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VIX_Close</th>\n",
+       "      <td>0.337834</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.294896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BTC_Close</th>\n",
+       "      <td>0.477942</td>\n",
+       "      <td>0.294896</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           cpu_index  VIX_Close  BTC_Close\n",
+       "cpu_index   1.000000   0.337834   0.477942\n",
+       "VIX_Close   0.337834   1.000000   0.294896\n",
+       "BTC_Close   0.477942   0.294896   1.000000"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_data.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr = merged_data.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr.to_csv('DATA/CPU+VIX+BTC_Corr.csv')"
    ]
   },
   {
